Add helper functions and debugging tools for PST email extraction
- Implemented helper functions in `helper.py` for extracting message class, decoding byte data, and parsing email headers.
- Created `msg_debug.py` to provide detailed debugging output for message structures, including attributes and record sets.
- Developed `msg_debug2.py` for extracting email data, including sender, recipients, timestamps, and content, with JSON output capability.
- Enhanced error handling and logging throughout the code for better traceability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "charset-normalizer>=3.4.2",
     "libpff-python>=20231205",
+    "striprtf>=0.0.29",
 ]
