--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "charset-normalizer>=3.4.2",
     "libpff-python>=20231205",
+    "python-dotenv>=1.1.1",
     "striprtf>=0.0.29",
 ]
