--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
+#--------------------------------------------
+# LOGGING CONFIGURATION
+#--------------------------------------------
 LOG_DIR=/home/kdy987/pst-utils/logs
 LOG_LEVEL=DEBUG
 LOG_MAX_BYTES=10485760
 LOG_BACKUP_COUNT=10
-DB_DIR=/home/kdy987/pst-utils/db
+
+#--------------------------------------------
+# BASE_DIRECTORIES
+#--------------------------------------------
+DB_BASE_DIR=/home/kdy987/pst-utils/db
+ATTATCH_BASE_DIR=/home/kdy987/pst-utils/attachments
