feat: PST 파일 경로 인자 추가 및 KST 변환 함수 구현

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,18 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "python": "${workspaceFolder}/.venv/bin/python"
+        },
+        {
+            "name": "D1",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "src.main",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/bin/python",
+            "args": [
+                "--pst-path",
+                "/mnt/c/tmp/2021.pst"  // Hardcoded path for testing
+            ]
         }
     ]
 }
