feat: 데이터베이스 및 첨부파일 경로 설정 개선, 이메일 데이터 저장 로직 수정

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,10 @@
             "module": "src.main",
             "console": "integratedTerminal",
             "python": "${workspaceFolder}/.venv/bin/python",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src"
+            },
             "args": [
-                "--pst-path",
                 "/mnt/c/tmp/2021.pst"  // Hardcoded path for testing
             ]
         }
