--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "libpff-python>=20231205",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pyinstaller>=6.14.2",
     "python-dotenv>=1.1.1",
     "striprtf>=0.0.29",
 ]
