fix: update hardcoded paths in launch.json and pst-extract.spec, enhance helper functions for email processing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
                 "PYTHONPATH": "${workspaceFolder}/src"
             },
             "args": [
-                "/mnt/c/tmp/2021.pst"  // Hardcoded path for testing
+                "/home/kdy987/tmp/2023.pst"  // Hardcoded path for testing
             ]
         }
     ]
